lib/src/compiler/tests/testdata/errors/27.out
error[E100]: wrong type
 --> line:3:17
  |
3 |     1 of (true, 2, false)
  |                 ^ expression should be `boolean`, but is `integer`
  |